# test-plugin

./: .gitignore  MANIFEST.IN  pyproject.toml
plugins_template/: main.py
plugins_template/model/devices/plugin_device/: device_startup_functions.py  plugin_device.py
plugins_template/model/features/: example_feature.py
